update index.html footer href

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="footer">
 			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a><div class="br"></div> Coded by
-			<a href="#">Shubham Saurabh</a>.
+			<a href="https://github.com/shubhsaur">Shubham Saurabh</a>.
 		</div>
 	</body>
 </html>
